<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gumtree</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_1">Image gallery fragment here</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="tools_posting_user">John Smith</string>
    <string name="tools_posting_since">Posting for 2+ years</string>
    <string name="tools_title">Title</string>
    <string name="tools_location">123 The Street, The Town, Somewhere</string>
    <string name="tools_price">£125,000</string>
    <string name="date_posted">Date posted</string>
    <string name="tools_description">Description of listing</string>
    <string name="tools_adref">Ad ref: 12345</string>

</resources>
